k8s/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apowerb-backend
  namespace: apowerb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apowerb-backend
  template:
    metadata:
      labels:
        app: apowerb-backend
    spec:
      containers:
        - name: apowerb
          image: apowerb/apowerb:0.2.53
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: apowerb-backend
  namespace: apowerb
spec:
  selector:
    app: apowerb-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
